--- a/vue-music/package.json
+++ b/vue-music/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
+    "better-scroll": "^1.8.4",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-lazyload": "^1.2.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
